--- a/src/index.htm
+++ b/src/index.htm
@@ -49,23 +49,23 @@
                 <span></span>
             </div>
         </nav>
-        <div class="sub_header">
+        <div class="subheader">
             <div class="container">
 
                 <div class="row">
                     <div class="col-6 col-md-4 offset-md-1">
-                        <a href="#" class="sub_header_logo">
+                        <a href="#" class="subheader_logo">
                             <img src="./img/logo/logo.png" alt="logo">
                         </a>
-                        <div class="sub_header_offitial">Официальный партнер Uber в Москве</div>
+                        <div class="subheader_offitial">Официальный партнер Uber в Москве</div>
                     </div>
                     <div class="xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
-                        <div class="sub_header_call">Звоните нам ежедневно</div>
-                        <a href="tel:+74957970988" class="sub_header_phone">8 495 797 09 88</a>
+                        <div class="subheader_call">Звоните нам ежедневно</div>
+                        <a href="tel:+74957970988" class="subheader_phone">8 495 797 09 88</a>
                     </div>
                     <div class="col-6 col-md-3">
-                        <a href="tel:+74957970988" class="xs-visible sub_header_phone">8 495 797 09 88</a>
-                        <button class="sub_header_btn">заказать звонок</button>
+                        <a href="tel:+74957970988" class="xs-visible subheader_phone">8 495 797 09 88</a>
+                        <button class="subheader_btn">заказать звонок</button>
                     </div>
                 </div>
 
@@ -80,7 +80,7 @@
                     <h1 class="promo_header">
                         КОМПАНИЯ UBER PARTNERS!
                     </h1>
-                    <h2 class="promo_sub_header">
+                    <h2 class="promo_subheader">
                         ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!
                     </h2>
                     <div class="promo_descr">
